5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1723_2496.log
== TEST (2019-05-09 10:36:06) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
if(x != -1):
	while(n!= -1):
	soma = n + x 
	print(soma)
	n = int(input("Digite o numero: " ))	
-- ERROR:
File "XXXX", line 5
    soma = n + x 
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:36:27) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
if(x != -1):
	while(n!= -1):
		soma = n + x 
		n = int(input("Digite o numero: " ))
print(soma)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:36:40) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
if(x != -1):
	while(n!= -1):
		soma = n + x 
		n = int(input("Digite o numero: " ))
	print(soma)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:40:58) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
while(n!=-1):
	x = x + n
	n = int(input("Digite o numero: " ))
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:30) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
while(n!=-1):
	x = x + n
	n = int(input("Digite o numero: " ))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:48) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
while(n!=-1):
	x = x + n
	n = int(input("Digite o numero: " ))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:42:09) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
while(n!=-1):
	x = x + n
	n = int(input("Digite o numero: " ))
print(x)
-- EXECUTION TIME:
0.200627
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:44:05) 
-- CODE:
n = int(input("Digite o numero: " ))
x = 0
while(n!=-1):
	x = x + n
	n = int(input("Digite o numero: " ))
print(x)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
